--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title></title>
 </head>
 <body>
+	<h3>Форма регистрации</h3>
+	Login: <input type="text" name="login"></br>
+	Password: <input type="password" name="pas"></br>
 
 </body>
 </html>
