--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<title></title>
 </head>
 <body>
-	<h3>Форма регистрации</h3>
+	<h3>Form for registration</h3>
 	Login: <input type="text" name="login"></br>
 	Password: <input type="password" name="pas"></br>
+	<button type="submit" name="send">Submit</button>
 
 </body>
 </html>
